--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.1.1",
     "@mui/icons-material": "^5.13.7",
     "@mui/joy": "^5.0.0-alpha.86",
     "@mui/material": "^5.13.7",
@@ -22,6 +23,8 @@
     "next": "13.4.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "react-hook-form": "^7.45.2",
+    "typescript": "5.1.6",
+    "yup": "^1.2.0"
   }
 }
