--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vinateddy",
+  "name": "gaubongxuatkhau",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -30,7 +30,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-markdown": "^8.0.7",
-    "sharp": "^0.32.4",
+    "sharp": "^0.32.5",
     "typescript": "5.1.6",
     "usehooks-ts": "^2.9.1",
     "yup": "^1.2.0"
